--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
         <h1 class="h1blue">Hi this is my H1</h1>
         <h4>Hi, here is another header element, which is an H4</h4>
+        <h3>This is a part 2 addition</h3>
     </header>
 </body>
 </html>
